--- a/package.json
+++ b/package.json
@@ -46,10 +46,12 @@
     "reading-time": "^1.5.0",
     "rehype-autolink-headings": "^7.1.0",
     "rehype-slug": "^6.0.0",
+    "remark-directive": "^4.0.0",
     "sanitize-html": "^2.11.0",
     "sass": "^1.68.0",
     "sharp": "^0.32.6",
-    "tailwindcss": "^4.0.3"
+    "tailwindcss": "^4.0.3",
+    "unist-util-visit": "^5.1.0"
   },
   "devDependencies": {
     "@types/marked": "^6.0.0",
