--- a/package.json
+++ b/package.json
@@ -49,10 +49,10 @@
     "rehype-external-links": "^3.0.0",
     "rehype-figure": "^1.0.1",
     "rehype-slug": "^6.0.0",
+    "rehype-unwrap-images": "^1.0.0",
     "remark-directive": "^4.0.0",
     "remark-gfm": "^4.0.1",
     "remark-toc": "^9.0.0",
-    "remark-unwrap-images": "^4.0.1",
     "sanitize-html": "^2.11.0",
     "sass": "^1.68.0",
     "sharp": "^0.32.6",
